sana_derive/tests/ui/fail-02-only-one-error-token.rs
use sana_derive::Sana;

#[derive(Clone, Copy, Sana)]
enum Token {
    #[error]
    Error1,

    #[error]
    Error2,
}

fn main() { }
